--- a/VRChat/69/992669.html
+++ b/VRChat/69/992669.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ko1fczv3qoKwVvzIXmFAICSPCxmr4l2HDHRX2YeKYKE="></script>
+    "Xe1+CXBTiFtWiJy7qM8swFMQdtLGX1mZF/AcqWPqmwU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル]眼鏡_001","description":"\u003c説明\u003e\n眼鏡の3Dモデルです。\n\nフロント部分とつる部分に分かれています。\nモデルに合わせて調節してご利用ください。\n\nマテリアルもご自由に。\n\nアリシア・ソリッドをモデルとして作成しました。\n配布データにアリシア・ソリッドのモデルは含まれていません。\n\n\u003c内容\u003e\n・FBXファイル\n\n\u003c仕様\u003e\n・ポリゴン数：1157（front : 693, side : 464[232]）\n・テクスチャ：なし（マテリアルのみ）\n\n\u003c利用規約\u003e\n・著作表示：不要\n・非商用利用：可\n・商用利用：可\n・改変：可\n・再配布：未改変のみ可","url":"https://booth.pm/ja/items/992669","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e25a78ad-8565-40d2-bfbf-01c215da6408/i/992669/4c6c2b47-7f31-4257-8411-9bb60c4d2e05_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ko1fczv3qoKwVvzIXmFAICSPCxmr4l2HDHRX2YeKYKE="></script>
+    nonce="Xe1+CXBTiFtWiJy7qM8swFMQdtLGX1mZF/AcqWPqmwU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -434,9 +434,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
