--- a/VRChat/22/992622.html
+++ b/VRChat/22/992622.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "yYF4D2Pr4M9TcYV6gDmN0+fGrP2eUx6aPTeYIOL0ojI="></script>
+    "1jHmeIyOwkz9AxIgaHbaEYJpzeKH+URv3bT+CLNUyhY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"とかしてるアイス","description":"なにかに押し付けてとかしてる感じのアイスです。\nVRChat用のアイテムとして作ってみました。\n4色のテクスチャとノーマルマップ同梱\nFBX形式、ポリ数は677です。\nそのままやデータを取り出せる形式での再配布、再販以外は自由にしてください。","url":"https://booth.pm/ja/items/992622","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/65a07bda-dcd9-4c17-bb24-23ec1ab4f9db/i/992622/387f6b7a-b4d1-4224-8f4c-86a1edbac9a2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yYF4D2Pr4M9TcYV6gDmN0+fGrP2eUx6aPTeYIOL0ojI="></script>
+    nonce="1jHmeIyOwkz9AxIgaHbaEYJpzeKH+URv3bT+CLNUyhY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -374,9 +374,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
