--- a/VRChat/13/992013.html
+++ b/VRChat/13/992013.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8w+WB5d81lQnza867UjFM4XeUJpUoMgcztGH7Y+aLC8="></script>
+    "BhivCq7C3ISRj/L3nM+oyAHqkH3zlM00pO6E45VmgKo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル「ソーラス」Ver2.3 +ソーラスVer Hallowe'en+ソーラスVer X'mas+ソーラスVer NewYear+ソーラスVer Valentine","description":"超蔟式オリジナルモデルとしてThoraxことソーラスちゃんを販売します。\nメカ娘が欲しいあなたに。\n\nVRChat想定で制作されていますが配信、ゲームコンテンツなどに収益化状態を問わず運用可能です。\n\nVRCでのフルトラッキング、加えてDynamic Bornに対応しました。まだ此方で項目の把握がしきれていないので今後とも更新予定あり。\n\nMMDモーションのスムーズなUnity移植に対応、搭載モーフにはMMDで一般的に用いられるものも多く含まれているため表情もしっかり対応します。\n\n改変及び商用利用も可能。\n素体、パーツを他のアバターへ使用することも許可しています。\n\nただしソーラスとその付属の\nモデル、テクスチャーの再配布、販売は改変の有無を問わず禁止です。\n特定個人や団体への中傷を目的とした利用も当然ながら禁止します。\n\n詳しくは後述の利用規約を参照。\n\n\n\n10/29よりソーラスちゃんハロウィン仕様を追加しました。\n此方にも同梱してありますが、もし気に入っていただければ別売版を購入していただければ幸いです。\nhttps://tyosokuhouse.booth.pm/items/1030706\n　\n12/30より新年向け振袖版を追加しました。\n着物柄は商用利用可能な素材を利用していますのでPsd側では削除させていただきました。\n素材元　http://borbone.info/\n\n2/5よりバレンタイン版を追加しました。アーガイル柄は商用可の素材を利用しています。","url":"https://booth.pm/ja/items/992013","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2400"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/992013/702a6677-bdfd-432f-bd2b-942a00ffff16_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8w+WB5d81lQnza867UjFM4XeUJpUoMgcztGH7Y+aLC8="></script>
+    nonce="BhivCq7C3ISRj/L3nM+oyAHqkH3zlM00pO6E45VmgKo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -764,9 +764,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
