--- a/VRChat/82/991682.html
+++ b/VRChat/82/991682.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "adPN3Sshdea1zkwp61OGxKvXrkfjXSEwlh8Pha0e5Ms="></script>
+    "V4STaauwatBgSMNV5GOb6WFi86dKSMm/VLv4i2+m7ls="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ReiChan式銃剣モデル","description":"VRChat使用想定　銃剣モデル\n\n\n内容物\n・ReiChan式_銃剣.unitypackage\n・UVテンプレート\n\nモデル概要\n・ポリゴン数：2775\n・マテリアル数：7\n\n\n改変可・再配布不可です。\n","url":"https://booth.pm/ja/items/991682","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/c5e6ca9e-0060-44bc-918c-e161cccb358b/i/991682/02dc14b7-3601-44df-bec9-dc58d7f0efc3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="adPN3Sshdea1zkwp61OGxKvXrkfjXSEwlh8Pha0e5Ms="></script>
+    nonce="V4STaauwatBgSMNV5GOb6WFi86dKSMm/VLv4i2+m7ls="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -374,9 +374,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
