--- a/VRChat/34/991334.html
+++ b/VRChat/34/991334.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Cp2KgANHfCqROb0Zv9RG2/9ABQQo+sKDXvBzHN31pT0="></script>
+    "/3dBuRhy1d85W38gVkBkYTzbZ/e8H7JegYw+uWuvjis="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サイバーパンク風ガスマスク（VRChat向けアクセサリー）","description":"ハードサーフェスな見た目のサイバーパンク風ガスマスクです。\nVRChatでの使用を想定して制作しました。\nフィルターにあたる部分の形状は二種類、カラーバリエーションは４つ用意してあります。好みの組み合わせをお使いください。\nシェーダはstandardを想定して制作していますがお好みものをご使用ください。\n\n三角面数・808(総合)\nマテリアル数・1","url":"https://booth.pm/ja/items/991334","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/fd5759e4-ba4e-4d8b-95f2-d86f545aef0c/i/991334/4c873716-2b45-4def-a7a4-85968c7e7b85_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Cp2KgANHfCqROb0Zv9RG2/9ABQQo+sKDXvBzHN31pT0="></script>
+    nonce="/3dBuRhy1d85W38gVkBkYTzbZ/e8H7JegYw+uWuvjis="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -472,9 +472,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
