--- a/VRChat/16/990716.html
+++ b/VRChat/16/990716.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "3fP90Q5lz/faORNz2zVNYgG5nZc/DwcblILoCHfwFU0="></script>
+    "JzxeB7ZrvlPE5P1C/tNe4jv7sx6aoD1oCa5NzU/NL+g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"マリンキャップ","description":"マリンキャップです\n△1608ポリゴン\n\nデータのみの再配布を禁じます\n(自作モデルに組み込む等は可)\n\n改変、動画、同人、移植、商用自由です。","url":"https://booth.pm/ja/items/990716","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e56a8ef4-8f34-4b71-9b03-b4f436803f81/i/990716/f544a1d2-c840-42ac-b96b-8d29decd0cff_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3fP90Q5lz/faORNz2zVNYgG5nZc/DwcblILoCHfwFU0="></script>
+    nonce="JzxeB7ZrvlPE5P1C/tNe4jv7sx6aoD1oCa5NzU/NL+g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -439,9 +439,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
