--- a/VRChat/94/990094.html
+++ b/VRChat/94/990094.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "5r0nHAfqN4V9PzpFXfD08yX8N5FKIgAgb8XLvxIHZgg="></script>
+    "YCh7CTY1Rkgw48NXMDUWpgKHLv+T3SGxIyMny08mDiE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"武装化バス停_ver1.2","description":"////////////////////　概要　////////////////////\nVRChat利用を想定した3Dモデルです。\n\nなんの変哲もあるバス停です。\nソーブレードモードとハンマーモードに変形することができます。\nシェイプキー８個、アニメーション用にボーンも入れてあります。\n\nポリゴン数：本体△444　回転刃△96※\nテクスチャ：1024x1024\n改変：可\n商用利用：可\n\n※prefab内にパーティクルとして2枠使用しているので、常時有効にする場合は+△192されます\n\n\n\n////////////////////　更新内容　////////////////////\n2018/08/27\tver1.0を販売開始\n2018/09/27\tver1.1にアップデート\n\t\t　　　 Animation入りのデモシーンを追加\n2018/10/11\tver1.2にアップデート\n\t\t        Legacyのアニメーションを削除、Animatorに対応\n\n\n////////////////////　内容物　////////////////////\n\nreadme.txt\nPrefab内容の簡易説明.png\n改変用.xcf（GIMP2.10.4で動作確認）\nBusStopWeapon_ver1.1.unitypackage\n\n\n\n////////////////////　利用方法　////////////////////\nunitypackageをインポート後、Prefabフォルダ内の「BusStopWeapon_ver1.0.prefab」をHierarchyにDrag\u0026Dropすればご使用いただけます。\n\n\n////////////////////　利用規約　////////////////////\n\n１．本モデルを使用した時点で、本利用規約に同意したものとみなします。\n\n２．武装化バス停（以降本モデル）及びそれに関連したデータの著作権は、製作者である天鵞絨に帰属します。\n\n３．本モデルの改変は規約の範囲内であれば問題ありません。\n\n４．商用利用・非商用利用問わず、本利用規約に従う限りその活動を制限しません。\n\n５．R-18、R-18G用途に制限はありません。\n\n６．本モデルとそれに関連するデータの再配布・販売は改変の有無を問わず禁止します。\n　\n７．特定個人や団体への中傷を目的とした利用を禁止します。\n\n８．本モデルを使用して生じたトラブル､損害に対して一切責任をとりません。\n\n９．この利用規約は予告なく変更・改定されることがあります。ご了承ください。\n\n規約制定日：2018/08/27\n\n\n////////////////////　連絡先　////////////////////\n不具合等ありましたらご連絡くださいませ。\n\n製作者：天鵞絨\nTwitter：@Velude_Archer","url":"https://booth.pm/ja/items/990094","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/5a9babbc-9806-4e11-96bb-37f1ee1318c2/i/990094/ea4f5750-eaae-4748-96b3-a86df332896c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5r0nHAfqN4V9PzpFXfD08yX8N5FKIgAgb8XLvxIHZgg="></script>
+    nonce="YCh7CTY1Rkgw48NXMDUWpgKHLv+T3SGxIyMny08mDiE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -432,9 +432,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
