--- a/VRChat/54/988954.html
+++ b/VRChat/54/988954.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "p7IIA6SlCfD2TUXfjMfutUJs+UGJa4HlBZC/uw0jEkA="></script>
+    "yHOEFzKpUtrBZxD1fNJ5ArVg1gBjJKUzaOoR7IBn1v0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル 土偶","description":"3Dモデル 土偶　紹介文\n\nこの商品は遮光器土偶をモデルに作成した3Dモデルです。\nボーンが入っているのでこのままVRChatのアバターとしても使用できます。\n\n△8140ポリゴン、テクスチャ同梱。\n\n＜利用規約＞\n\n本モデルを使用したことによって生じるいかなる損害に対して等方は一切責任を負いません。\n条件についての内容は予告なく変更する場合があります。\n\n非改変での再配布、再販売は禁止。また他人への差別行為には使用しないでください。まぁこれ以外は大体自由です。\n\n●内容物\n\n・fbxファイル \"clay_doll.fbx\"\n・テクスチャ \"doguu_skin.png\"\n\nまたこれらのデータはzip形式で圧縮してあります。","url":"https://booth.pm/ja/items/988954","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8f9f026a-3963-4972-9b28-0d458c4521ab/i/988954/b1cf2a75-be37-45df-ad73-1cc9420e4577_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="p7IIA6SlCfD2TUXfjMfutUJs+UGJa4HlBZC/uw0jEkA="></script>
+    nonce="yHOEFzKpUtrBZxD1fNJ5ArVg1gBjJKUzaOoR7IBn1v0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -402,9 +402,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
