--- a/VRChat/13/987813.html
+++ b/VRChat/13/987813.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/obNB/Wjkcf4II/+yZLNIavBmYFtaFUg1ZA009pmm/Y="></script>
+    "aqDs2OU7OvkU7NIw9G1cXzYfbBCPIjGGUj87cY0P5DA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定3Dモデル「ラミアさん」【バーチャルマーケット】","description":"VRChat想定3Dモデル「ラミアさん」【バーチャルマーケット】\n\nVRChatでの利用を想定した3Dモデルです。\nUnitypackageを同梱しており、セットアップ済みのモデルをすぐにアップロードできます。\n\n※以下にモデルについての利用規約が記載されております。\nご購入の前に必ずお読みいただき、ご了承された上でのご購入をお願いいたします。Boothの仕様上返金対応は致しかねます。\n\n【利用規約】\n本商品を所持した時点で、以下の規約に同意したものとします。\n\n●権利について\n・収録されている3Dモデルデータ及び画像データ(以下本データ)について、権利はつっきーてぃーが有しております。\n\n●使用について\n・商用、非商用を問わず、VRChat及びその他のコンテンツに本データを使用することを許可します。\n・本データを改変して使用する事を許可します。\n・VRChat以外での使用は本データを別途調整していただく必要があります。その際のサポートは行いません。\n・本データのR-18、R-18Gコンテンツでの使用を許可します。\n・本データを使用したことによるいかなる損害の責任もつっきーてぃーは負いません。\n・政治的主張、宗教行為、ヘイトスピーチ、他者への嫌がらせ、その他公序良俗に反する目的での使用を禁じます。\n\n●再配布について\n・VRChatにおけるAvator Pedestal等、他者が本データを使用可能な状態にする事を禁止します。\n・本データをそのままの形で取り出せる状態での再配布を禁じます。\n\n●クレジット表記について\n・本データをVRChat等で3Dアバターとして使用する場合、クレジット表記は不要です。\n・その他の方法で本データを使用する場合は、「つっきーてぃー」とご明記ください。\n\n制定日　2018/08/25\n改定    2020/12/31 ツッキー・Tをつっきーてぃーに変更。\n\n【更新履歴】\n2020/12/31 v1.1.0 マテリアルを削減し軽量化、シェーダーをarktoon shaderに変更。unity2018.4.20fに対応。","url":"https://booth.pm/ja/items/987813","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/1eb19d48-5626-4195-a111-a028c8b98f15/i/987813/c8a6a3ae-9e2a-4548-8fd2-218c0759537d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/obNB/Wjkcf4II/+yZLNIavBmYFtaFUg1ZA009pmm/Y="></script>
+    nonce="aqDs2OU7OvkU7NIw9G1cXzYfbBCPIjGGUj87cY0P5DA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -425,9 +425,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
