--- a/VRChat/01/987801.html
+++ b/VRChat/01/987801.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "IGdawZEBgxkzaZoXmQeBnRsOfQ2NpOtTncI2/G00G9s="></script>
+    "XUQY/85Av/1Va71uFs2trKiiXyCnHjA4W3LBGr11vJg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"KUKURiオリジナル3Dアバターキャラクター 桜川虎子（TORAKO SAKURAGAWA ver1.0.0 forVRC）＋おまけ forVRM形式","description":"KUKURiオリジナル3Dアバターキャラクター\n桜川虎子（TORAKO SAKURAGAWA ver1.0.0 forVRC）＋おまけ forVRM形式\n","url":"https://booth.pm/ja/items/987801","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2800"},"image":"https://booth.pximg.net/c/620x620/a97a7d82-36d7-4277-a77c-45ad0d0cf840/i/987801/12a22a58-b449-48e8-9990-46575f855d85_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IGdawZEBgxkzaZoXmQeBnRsOfQ2NpOtTncI2/G00G9s="></script>
+    nonce="XUQY/85Av/1Va71uFs2trKiiXyCnHjA4W3LBGr11vJg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -532,9 +532,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
